--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         </div>
     
                         <div class="line-2">
-                            <p class="num">/22</p>
+                            <p class="num"></p>
                             <p>Web Development</p>
                             <button class="loop">
                                 <span>Contact us: chowdhurydebanjan.deb@gmail.com&nbsp;&nbsp;&nbsp;&nbsp;</span>
